--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -4,7 +4,7 @@
   apt:
     name:  "{{ item }}"
     state: present
-  with_items:
-    - logentries
-    - logentries-daemon
-
+    install_recommends: false
+    update_cache:       true
+    cache_valid_time:   3600
+  with_items: "{{ manala_logentries_install_packages|default(manala_logentries_install_packages_default, True) }}"
