--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,17 +1,17 @@
 ---
 
 # Install
-- include: install.yml
+- import_tasks: install.yml
   tags:
     - manala_logentries
 
 # Config
-- include: config.yml
+- import_tasks: config.yml
   tags:
     - manala_logentries
 
 # Services
-- include: services.yml
+- import_tasks: services.yml
   tags:
     - manala_logentries
     - manala_logentries.services
