--- a/tests/0100_install.yml
+++ b/tests/0100_install.yml
@@ -4,7 +4,7 @@
   hosts: debian
   become: true
   pre_tasks:
-    - include: pre_tasks/logentries.yml
+    - import_tasks: pre_tasks/logentries.yml
     - copy:
         dest: /etc/apt/preferences.d/logentries
         content: |
